2010-01-21  Brady Eidson  <beidson@apple.com>

        Reviewed by Maciej Stachowiak.

        history.back() for same-document history traversals isn't synchronous as the specification states.
        <rdar://problem/7535011> and https://bugs.webkit.org/show_bug.cgi?id=33538

        The change in loading behavior is well covered via modifications to these previous tests:

        * fast/loader/stateobjects/document-destroyed-navigate-back-with-fragment-scroll.html:
        * fast/loader/stateobjects/pushstate-with-fragment-urls-and-hashchange-expected.txt:
        * fast/loader/stateobjects/pushstate-with-fragment-urls-and-hashchange.html:
        * fast/loader/stateobjects/state-api-on-detached-frame-crash-expected.txt:
        * fast/loader/stateobjects/state-api-on-detached-frame-crash.html:

2010-01-21  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        HTMLInputElement::valueAsDate setter support for type=datetime.
        https://bugs.webkit.org/show_bug.cgi?id=33939

        Add setter tests to input-valueasdate-datetime.js, and update the
        expectation.

        Note: the expectation file contains some FAIL lines. They are
        intentional because they test a unimplemented feature.

        * fast/forms/input-valueasdate-datetime-expected.txt:
        * fast/forms/script-tests/input-valueasdate-datetime.js:

2010-01-21  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        3 tests for CSS are misplaced
        https://bugs.webkit.org/show_bug.cgi?id=33942

        * css2.1/atrule_longest_match-expected.txt: Removed.
        * css2.1/atrule_longest_match.html: Removed.
        * css2.1/bogus-color-span.html: Removed.
        * css2.1/css1_forward_compatible_parsing.html: Removed.
        * fast/css/atrule_longest_match-expected.txt: Copied from LayoutTests/css2.1/atrule_longest_match-expected.txt.