@@ -2,7 +2,6 @@ Make sure WebSocket object acts as EventTarget.
 
 On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
 
-
 PASS open_event_handled is false
 PASS message_event_handled is false
 PASS close_event_handled is false
