@@ -1,3 +1,15 @@
+2010-01-21  Fumitoshi Ukai  <ukai@chromium.org>
+
+        Reviewed by Shinichiro Hamaji.
+
+        Move fast/websockets into websocket/tests
+        https://bugs.webkit.org/show_bug.cgi?id=32258
+
+        * fast/websockets: Removed.
+        * websocket/tests/script-tests/websocket-event-target.js: Copied from LayoutTests/fast/websockets/script-tests/websocket-event-target.js.
+        * websocket/tests/websocket-event-target-expected.txt: Copied from LayoutTests/fast/websockets/websocket-event-target-expected.txt.
+        * websocket/tests/websocket-event-target.html: Copied from LayoutTests/fast/websockets/websocket-event-target.html.
+
 2010-01-21  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Maciej Stachowiak.
